--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -20,6 +20,7 @@
       <a href="/index.html" id="mobile-avatar" style="background-image:url({{ site.avatar }})"></a>
       <!-- NOTE: input field is disabled by default -->
       <!-- <input id="search-input" type="text" placeholder="Search..." >  -->
+	  <h3>{{site.title}}</h3>
     </form>
 
     <nav id="pl__container">
