--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -302,6 +302,19 @@ a {
     #pl__container {
       font-size: 15px;
       top: 50px; } }
+.main_title{
+	  margin: 12px 12px;
+	  padding: 12px 8px 3px;
+	  border-radius: 4px;
+	  display: block; }
+	  .pl__all.active {
+		color: #29a284;
+		background: rgba(242, 242, 242, 0.5);
+		box-shadow: -1px 1px rgba(229, 232, 236, 0.9); }
+		.pl__all.active > .pl__circle {
+		  background: rgba(242, 242, 242, 0.5);
+		  border-color: #29a284; }
+}
 
 .pl__all {
   margin: 4px 12px;
