--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -20,6 +20,6 @@
     </div> <!-- end #post -->
 
     {% include footer.html %}
-    {% include googleanalytics.html %}
+    {% include analytics.html %}
   </body>
 </html>
