--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,4 +4,10 @@
 <script src="/assets/js/jquery.pjax.js"></script>
 <script src="/assets/js/nprogress.js"></script>
 <script src="/assets/js/script.js"></script>
-<script src="/assets/js/duoshuo.js"></script>
+<% case site.comments.provider %>
+<% when "duoshuo" %>
+  <% <script src="/assets/js/duoshuo.js"></script> %>
+<% when "disqus" %>
+  <% <script src="/assets/js/disqus.js"></script> %>
+<% endcate %>
+
