--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,5 +8,9 @@ layout: base
 </article> <!-- end #post__content -->
 
 {% include share.html %}
-{% include duoshuo.html %}
-
+{% case site.comments.provider %}
+{% when "duoshuo" %}
+  {% include duoshuo.html %}
+{% when "disqus" %}
+  {% include disqus.html %}
+{% endcase %}
