--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,5 +7,5 @@
 {% case site.comments.provider %}
 {% when "duoshuo" %}
   {% <script src="/assets/js/duoshuo.js"></script> %}
-{% endcate %}
+{% endcase %}
 
