--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,5 +7,7 @@
 {% case site.comments.provider %}
 {% when "duoshuo" %}
   {% <script src="/assets/js/duoshuo.js"></script> %}
+{% when "disqus" %}
+  {% <script src="/assets/js/disqus/js"></script> %}
 {% endcase %}
 
