--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,6 +8,6 @@
 {% when "duoshuo" %}
   {% <script src="/assets/js/duoshuo.js"></script> %}
 {% when "disqus" %}
-  {% <script src="/assets/js/disqus/js"></script> %}
+  {% <script src="/assets/js/disqus.js"></script> %}
 {% endcase %}
 
