--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,4 +4,4 @@
 <script src="/assets/js/jquery.pjax.js"></script>
 <script src="/assets/js/nprogress.js"></script>
 <script src="/assets/js/script.js"></script>
-<script src="/assets/js/{{site.comments.provider}}.js"></script>
+<!-- <script src="/assets/js/{{site.comments.provider}}.js"></script> -->
