--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -8,4 +8,9 @@ layout: base
 </article> <!-- end #post__content -->
 
 {% include share.html %}
-{% include disqus.html %}
+{% case site.comments.provider %}
+{% when "disqus" %}
+  {% include disqus.html %}
+{% when "youyan" %}
+  {% include youyan.html %}
+{% endcase %}
