--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,3 +5,6 @@
 <script src="/assets/js/nprogress.js"></script>
 <script src="/assets/js/script.js"></script>
 <!-- <script src="/assets/js/{{site.comments.provider}}.js"></script> -->
+{% if site.comments.provider == "disqus" %}
+  <script scr="/assets/js/{{site.comments.provider}}.js"></script>
+{% endif %}
