--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,5 +6,5 @@
 <script src="/assets/js/script.js"></script>
 <!-- <script src="/assets/js/{{site.comments.provider}}.js"></script> -->
 {% if site.comments.provider == "disqus" %}
-  <script scr="/assets/js/{{site.comments.provider}}.js"></script>
+  <script scr="/assets/js/disqus.js"></script>
 {% endif %}
