--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -11,4 +11,6 @@ layout: base
 {% case site.comments.provider %}
 {% when "disqus" %}
   {% include disqus.html %}
+{% when "youyan" %}
+  {% include youyan.html %}
 {% endcase %}
