--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,6 +4,7 @@ layout: base
 
 <article id="post__content">
   <h1 id="post__title" data-identifier="{{ page.date | date: "%Y%m%d" }}">{{ page.title }}</h1>
+   <h6 style="color:#CCCCCC">发表于  {{ page.date | date: "%F %H:%M:%S" }}</h6>
   {{ content }}
 </article> <!-- end #post__content -->
 
