--- a/_includes/duoshuo.html
+++ b/_includes/duoshuo.html
@@ -1,2 +1,4 @@
 <!-- 多说评论框 start -->
-	<div class="ds-thread" data-thread-key="{{page.title}}" data-title="{{page.title}}" data-url="{{page.url}}"></div>
+	<div class="ds-thread" data-thread-key="{{page.title}}" data-title="{{page.title}}" data-url="{{page.url}}">
+	<a href="http://duoshuo.com" class="dsq-brlink" target="_blank">正在加载评论...</a>
+</div>
