--- a/_includes/duoshuo.html
+++ b/_includes/duoshuo.html
@@ -1,4 +1,5 @@
 <!-- 多说评论框 start -->
-	<div class="ds-thread" data-thread-key="{{page.title}}" data-title="{{page.title}}" data-url="{{page.url}}">
+<div class="ds-thread" data-thread-key="{{page.title}}" data-title="{{page.title}}" data-url="{{page.url}}">
+	<noscript>请确定启用了JavaScript<a href="http://disqus.com/?ref_noscript">评论来自多说.</a></noscript>
 	<a href="http://duoshuo.com" class="dsq-brlink" target="_blank">正在加载评论...</a>
 </div>
