--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -583,7 +583,7 @@ iframe {
   #icon-weibo:before {
     content: "\e804"; }
 
-#disqus_thread {
+#ds_thread {
   padding: 30px 0;
   -webkit-box-sizing: content-box;
   -moz-box-sizing: content-box;
