--- a/assets/_sass/style.scss
+++ b/assets/_sass/style.scss
@@ -770,7 +770,7 @@ iframe {
 
 //------- {{ disqus_thread }} -------//
 
-#disqus_thread {
+#ds_thread {
   padding: 30px 0;
   -webkit-box-sizing: content-box;
   -moz-box-sizing: content-box;
