--- a/_includes/duoshuo.html
+++ b/_includes/duoshuo.html
@@ -3,3 +3,6 @@
 	<noscript>请确定启用了JavaScript<a href="http://disqus.com/?ref_noscript">评论来自多说.</a></noscript>
 	<a href="http://duoshuo.com" class="dsq-brlink" target="_blank">正在加载评论...</a>
 </div>
+<script>
+	  var duoshuoQuery = {short_name:"jnchen"};
+</script>
