--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,5 +9,5 @@ layout: base
 </article> <!-- end #post__content -->
 
 {% include share.html %}
-{% include duoshuo.html %}
+{% include disqus.html %}
 
